# llm-redteam-toolkit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: ATTACK_CATALOG.md  RESPONSIBLE_USE.md  THREAT_MODEL.md
examples/: sample_run.md  vulnerable_chatbot.py
examples/sample_report/: report.json  report.md
src/llm_redteam/: __init__.py  cli.py
src/llm_redteam/core/: __init__.py  judge.py  report.py  runner.py  target.py
src/llm_redteam/payloads/: __init__.py  data_leakage.yaml  direct_injection.yaml  encoding_attacks.yaml  indirect_injection.yaml  insecure_output.yaml  jailbreaks.yaml  loader.py
tests/: conftest.py  test_payloads.py  test_runner.py
